--- a/test/index.html
+++ b/test/index.html
@@ -16,11 +16,13 @@
 	<script type="text/javascript" src="../src/color.parse.js"></script>
 	<script type="text/javascript" src="../src/color.related.js"></script>
 	<script type="text/javascript" src="../src/color.palette.css3.js"></script>
+	<script type="text/javascript" src="../src/color.css.js"></script>
 
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/core.js"></script>
 	<script type="text/javascript" src="unit/parse.js"></script>
 	<script type="text/javascript" src="unit/object.js"></script>
+	<script type="text/javascript" src="unit/css.js"></script>
 </head>
 
 <body>
@@ -29,6 +31,8 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol>
-	<div id="bind-target"></div>
+	<div id="css-test-source" style="background-color: #ffeedd"></div>
+	<div id="css-test-target"></div>
+	<div id="css-test-chain"></div>
 </body>
 </html>
